# ZDM-Device-Mapper

./: README.md
include/linux/: blk-zoned-ctrl.h
kernel/: MAINTAINERS  TODO.txt  ZDM.txt
kernel/block/: Kconfig  bio.c  blk-core.c  blk-lib.c  blk-merge.c  blk-mq.c  blk-settings.c  blk-sysfs.c  blk-zoned-ctrl.c  ioctl.c
kernel/certs/: signing_key.pem  signing_key.x509
kernel/drivers/ata/: libata-scsi.c
kernel/drivers/md/: Kconfig  dm-io.c  dm-zdm.c  dm-zdm.h  dm-zoned.c  dm-zoned.h  libzdm.c  libzoned.c  raid5.c
kernel/drivers/scsi/: Kconfig  Makefile  scsi_lib.c  sd.c  sd.h  sd_zbc.c
kernel/fs/: buffer.c  direct-io.c  mpage.c  open.c
kernel/fs/btrfs/: disk-io.c  extent_io.c  inode.c
kernel/fs/ext4/: page-io.c
kernel/fs/xfs/: xfs_aops.c
kernel/include/linux/: ata.h  blk-mq.h  blk_types.h  blkdev.h  blkzoned_api.h  fs.h
kernel/include/scsi/: scsi.h  scsi_device.h
kernel/kernel/: x509_certificate_list
kernel/mm/: backing-dev.c
patches/ceph/: ceph-0.94.5-add-ZDM-OSD-support.patch
patches/linux/v4.1/: 0001-Limit-bio_endio-recursion.patch  0002-Add-ZBC-ZAC-xlat-support-for-report-open-close-reset.patch  0002-Add-ZBC-ZAC-xlat-support-for-report-open-close.patch  0003-Support-ZAC-ZBC-commands-via-block-layer.patch  0003-Support-sending-ZAC-ZBC-commands-via-block-layer.patch  0004-Provide-ioctl-access-for-ZAC-ZBC-commands.patch  0005-ZDM-New-DM-target-zoned.patch
patches/linux/v4.1+ZDM-r101/: 0001-Limit-bio_endio-recursion.patch  0002-Add-ZBC-ZAC-xlat-support-for-report-open-close-reset.patch  0003-Support-ZAC-ZBC-commands-via-block-layer.patch  0004-Provide-ioctl-access-for-ZAC-ZBC-commands.patch  0005-ZDM-New-DM-target-zoned.patch  0006-RAID-4-5-6-Indicate-parity-blocks-as-META.patch  0007-RAID-4-5-6-Fine-grained-TRIM-enable-for-ZDM.patch
patches/linux/v4.2+ZDM-r101/: 0001-Limit-bio_endio-recursion.patch  0002-Add-ZBC-ZAC-xlat-support-for-report-open-close-reset.patch  0003-Support-ZAC-ZBC-commands-via-block-layer.patch  0004-Provide-ioctl-access-for-ZAC-ZBC-commands.patch  0005-ZDM-New-DM-target-zoned.patch  0006-RAID-4-5-6-Indicate-parity-blocks-as-META.patch  0007-RAID-4-5-6-Fine-grained-TRIM-enable-for-ZDM.patch
patches/linux/v4.2+ZDM-r103/: 0001-Limit-bio_endio-recursion.patch  0002-Add-ZBC-ZAC-xlat-support-for-report-open-close-reset.patch  0003-Support-ZAC-ZBC-commands-via-block-layer.patch  0004-Provide-ioctl-access-for-ZAC-ZBC-commands.patch  0005-ZDM-New-DM-target-zoned-r103.patch  0006-RAID-4-5-6-Indicate-parity-blocks-as-META.patch  0007-RAID-4-5-6-Fine-grained-TRIM-enable-for-ZDM.patch  0008-Stream-Id-Use-PID-to-seed-Stream-Id-construction.patch
patches/linux/v4.2+ZDM-r105/: 0001-idr-make-ida_simple_remove-return-an-error.patch  0002-block-add-support-for-carrying-a-stream-ID-in-a-bio.patch  0003-Add-support-for-per-file-inode-stream-ID.patch  0004-Add-system-call-for-setting-inode-file-write-stream-.patch  0005-wire-up-system-call-for-x86-x86-64.patch  0006-Add-support-for-bdi-tracking-of-stream-ID.patch  0007-direct-io-add-support-for-write-stream-IDs.patch  0008-Add-stream-ID-support-for-buffered.patch  0009-btrfs-add-support-for-write-stream-IDs.patch  0010-xfs-add-support-for-buffered-writeback-stream-ID.patch  0011-ext4-add-support-for-write-stream-IDs.patch  0012-Add-ZBC-ZAC-xlat-support-for-report-open-close-reset.patch  0013-ata-scsi-Translate-ReportZones-result-to-big-endian.patch  0014-BUG-Losing-bits-on-request.cmd_flags.patch  0015-Add-bio-request-flags-for-using-ZBC-ZAC-commands.patch  0016-Add-ioctl-to-issue-ZBC-ZAC-commands-via-block-layer.patch  0017-Add-ata-pass-through-path-for-ZAC-commands.patch  0018-ZDM-New-DM-target-zoned.patch  0019-RAID-4-5-6-Indicate-parity-blocks-as-META.patch  0020-RAID-4-5-6-Fine-grained-TRIM-enable-for-ZDM.patch  0021-Limit-bio_endio-recursion.patch  0022-Stream-Id-Use-PID-to-seed-Stream-Id-construction.patch  0023-Block-Zoned-Control-for-Userspace.patch
patches/linux/v4.2+ZDM-r106/: 0001-idr-make-ida_simple_remove-return-an-error.patch  0002-block-add-support-for-carrying-a-stream-ID-in-a-bio.patch  0003-Add-support-for-per-file-inode-stream-ID.patch  0004-Add-system-call-for-setting-inode-file-write-stream-.patch  0005-wire-up-system-call-for-x86-x86-64.patch  0006-Add-support-for-bdi-tracking-of-stream-ID.patch  0007-direct-io-add-support-for-write-stream-IDs.patch  0008-Add-stream-ID-support-for-buffered.patch  0009-btrfs-add-support-for-write-stream-IDs.patch  0010-xfs-add-support-for-buffered-writeback-stream-ID.patch  0011-ext4-add-support-for-write-stream-IDs.patch  (+13 more)
patches/util-linux-ng/: util-linux-ng-2.17.2-zdm-v97.patch
sd-tools/: CMakeLists.txt  README.md
sd-tools/sd_identify/: sd_identify.c
sd-tools/sd_report_zones/: blkreport.c  make-nonseq.sh  report-all-zones.sh  sd_blkreport.c  sd_report_zones.c
sd-tools/sd_reset_wp/: sd_reset_wp.c  sd_zone_close.c  sd_zone_finish.c  sd_zone_open.c
sd-tools/uapi-missing/linux/: blkzoned_api.h
sd/include/: sdtools.h  sdtools_version.h.in
sd/sd_reset_wp/: sd_reset_wp.c  sd_zone_close.c  sd_zone_finish.c
sdz-utils/: CMakeLists.txt  configure
sdz-utils/sd_identify/: sd_identify.c
sdz-utils/sd_report_zones/: sd_report_zones.c
sdz-utils/sd_reset_wp/: sd_zone_open.c
src/: Makefile  README.md  install-my-bin  zdm-mlog.c  zdmadm.c
src/h/: crc64.h  is_mounted.h  libcrc.h  libsort.h
src/lib/: Makefile  libzoned.c
src/zdmonitor/: zdmon.cpp  zdmon.h  zdmon.pro  zdmon.ui  zdmon_main.cpp  zoneswidget.cpp  zoneswidget.h
zdm-tools/: CMakeLists.txt  Makefile  README.md  install-my-bin  kmrg.sh
zdm-tools/h/: dm-zdm.h  dm-zoned.h  hash.h  libcrc.h  libzdm-compat.h  libzdm.h  libzdmwrap.h  list.h  utypes.h  zbc-ctrl.h  zdm_version.h.in  zdmioctl.h
zdm-tools/lib/: libcrc.c  libzdm.c  libzdmwrap.c  zbc-ctrl.c
zdm-tools/src/: Makefile  blkreport.c  blkreset.c  zdm-mlog.c  zdm-rawio.c  zdm-report.c  zdm-status.c  zdm-zonecmd.c  zdm-zones.c  zdmadm.c
zdm-tools/uapi-missing/linux/: blk-zoned-ctrl.h  blkzoned_api.h
zdm-tools/zdmonitor/: CMakeLists.txt  zdmon.cpp  zdmon.h  zdmon.pro  zdmon.ui  zoneswidget.cpp  zoneswidget.h
(+701 files in other folders)
